--- a/src/styleWork.css
+++ b/src/styleWork.css
@@ -1,4 +1,5 @@
 
+
 a{
     background-color:transparent
 }
@@ -24,9 +25,7 @@ a:hover{
 .link,.link:active,.link:focus,.link:hover,.link:link,.link:visited{
     transition:color .15s ease-in
 }
-.link:focus{
-    outline:1px dotted currentColor
-}
+
 .list{
     list-style-type:none
 }
@@ -57,14 +56,27 @@ a:hover{
 .light-blue{
     color:#96ccff
 }
-.bg-black-70{
-    background-color:rgba(0,0,0,.7)
+.bg-black-40{
+    background-color:rgba(0,0,0,.4)
 }
 .bg-blue{
-    background-color:#357edd
+    background-color:rgb(53, 126, 221, 0.92)
 }
+
+.bg-red{
+    background-color: rgb(246, 54, 24, 0.95)
+}
+
+.bg-orange{
+    background-color: #ff6300
+}
+
+.bg-green{
+    background-color: #19a974
+}
+
 .hover-blue:focus,.hover-blue:hover{
-    color:#357edd
+    color: var(--generated-color)
 }
 .pa0{
     padding:0
@@ -87,10 +99,10 @@ a:hover{
     font-size:1.25rem
 }
 .f6{
-    font-size:.875rem
+    font-size:.8rem
 }
 .f7{
-    font-size:.75rem
+    font-size:.8rem
 }
 .measure-wide{
     max-width:34em
