--- a/src/styleAbout.css
+++ b/src/styleAbout.css
@@ -1,17 +1,24 @@
-.username-lg, .hero-name{
+
+
+.username-lg, .hero-name, .resume{
     font-weight: 400; 
     -webkit-text-stroke: 0.25px #eeecec  !important;  
     transition: color 0.7s linear;  
-    transform: scale(.97, 1)
+    transform: scale(.97, 1);
+    font-size:16px;
+    -webkit-text-stroke: 0px !important;  
+  }
+  
+  #action, #mob-action, #mob-action2, .hero-name{
+    text-decoration: underline;
+    text-decoration-thickness: 1px; 
+    text-underline-offset: 7px;
+    color: black; 
   }
 
-.username-lg{
-    font-size:18px;
-}
-
 #action{
-    font-size:20px;
-    
+    font-size:16px;
+    text-underline-offset: 4px;
 }
 
 .highlight:hover{
@@ -22,15 +29,6 @@
 #action:hover {
     zoom:100.7%;
  }
-
-.hero-name{  
-  
-    text-decoration: underline;
-    text-decoration-thickness: 2px; 
-    -webkit-text-stroke: 0px !important;  
-    text-underline-offset: 8px;
-    
-  }
   
   .hero-name:hover{
     cursor:pointer; 
@@ -51,22 +49,16 @@
   .hero-action{
     transform: scale(0.95, 1) !important;
     font-weight: 400;
-    
-  }
+      }
   
-  #action, #mob-action, #mob-action2, .hero-name{
-    text-decoration: underline;
-    text-decoration-thickness: 1px; 
-    text-underline-offset: 7px;
-    color: black; 
-  }
+ 
 
 @media only screen and  (max-width:1660px){
     .username-lg, .hero-name, .resume {
-      font-size: 18px;
+      font-size: 14px;
     }
     #action{
-        font-size:20px;
+        font-size:14px;
         
     }
   }
@@ -74,14 +66,14 @@
 
   @media only screen and  (max-width:1400px){
     .username-lg, .hero-name, .resume {
-      font-size: 16px;
+      font-size: 12px;
     }
     .hero-name {  
       text-decoration-thickness: 0.7px; 
       text-underline-offset: 8px;
     }
     #action {
-      font-size: 18px;
+      font-size: 12px;
     }
     .hero-text-desktop, .hero-action{
         bottom: 30px; 
@@ -91,14 +83,14 @@
   
   @media only screen and  (max-width:1199px){
     .username-lg, .hero-name, .resume{
-      font-size: 14px;
+      font-size: 10px;
     }
     .hero-name{  
       text-decoration-thickness: 0.5px; 
       text-underline-offset: 6px;
     }
     #action{
-      font-size: 14px;
+      font-size: 10px;
       text-decoration-thickness: 0.5px; 
       text-underline-offset: 2px;
     }
@@ -137,28 +129,28 @@
   }
   
   @media only screen and  (max-width:900px){
-    .username-lg, .hero-name {
+    .username-lg, .hero-name, .resume {
         font-size: 14px;
       }
 
-      #mob-action, .resume {
+      #mob-action {
         font-size: 10px;
       }
       
   }
 
   @media only screen and  (max-width:767px){
-    .username-lg, .hero-name {
+    .username-lg, .hero-name, .resume {
       font-size: 12px ;
     } 
-    #mob-action2, .resume {
+    #mob-action2 {
         font-size: 10px;
       }
    
   }
      
   @media only screen and  (max-width:576px){
-    .username-lg, .hero-name {
+    .username-lg, .hero-name , .resume{
       font-size: 9px !important;
     }
     
@@ -166,7 +158,7 @@
       left:0px;
     }
 
-    #mob-action2 , .resume{
+    #mob-action2 {
         font-size: 8px;
       }
 
@@ -188,10 +180,10 @@
       
     }
    
-    #mob-action-link2, .resume{
+    #mob-action-link2{
       font-size: 6px !important; 
     }  
-    .username-lg, .hero-name{
+    .username-lg, .hero-name, .resume{
       font-size: 6.5px !important;
        
       
