--- a/src/styleWork.css
+++ b/src/styleWork.css
@@ -1,4 +1,7 @@
 
+.works-mob{
+    display:none
+}
 
 a{
     background-color:transparent
@@ -119,3 +122,35 @@ a:hover{
         opacity:1
     }
 }
+
+@media only screen and  (max-width:1601px){
+    html{
+      zoom:90%
+    }
+  }
+  
+  @media only screen and  (max-width:1367px){
+    html{
+      zoom:80%
+    }
+  }
+  
+  @media only screen and  (max-width:993px){
+    .works-mob{
+     display:block;
+  
+     zoom:80%
+    }
+  }
+  
+  @media only screen and  (max-width:576px){
+    html{
+        zoom:70%
+      }
+  }
+  
+  @media only screen and  (max-width:319px){
+    html{
+      zoom:70%
+    }
+  }
