fixed github api call for last commit

--- a/src/styles.css
+++ b/src/styles.css
@@ -173,7 +173,9 @@ canvas#canvas {
   font-size: 20px;
 }
 
-
+i:hover{
+  color: var(--generated-color) !important
+}
 .offcanvas-body{
   display: flex;
   align-items: center;
