--- a/src/styleWork.css
+++ b/src/styleWork.css
@@ -1,3 +1,6 @@
+body{
+    zoom:95%
+}
 .works-mob{
     display:none 
 }
@@ -8,7 +11,8 @@ a,body,div,h2,html,p,ul{
     box-sizing:border-box 
 }
 .br1{
-    border-radius:.125rem 
+    border-radius:.125rem ;
+    zoom:90%;
 }
 .b{
     font-weight:500 
@@ -20,8 +24,16 @@ a,body,div,h2,html,p,ul{
     text-decoration:none 
 }
 .link,.link:active,.link:focus,.link:hover,.link:link,.link:visited{
-    transition:color .15s ease-in 
+    transition:color .15s ease-in;
+    
 }
+   .fa-github:hover, .name-link:hover, .link:focus,.link:hover  {
+    transition:color .15s ease-in;
+    color:blue !important;
+    
+}
+ 
+
 .list{
     list-style-type:none 
 }
@@ -34,23 +46,8 @@ a,body,div,h2,html,p,ul{
 .white{
     color:#fff 
 }
-.light-red{
-    color:#ff725c 
-}
-.orange{
-    color:#ff6300 
-}
 .purple{
     color:#5e2ca5 
-}
-.dark-pink{
-    color:#d5008f 
-}
-.green{
-    color:#19a974 
-}
-.light-blue{
-    color:#96ccff 
 }
 .bg-black-40{
     background-color:rgba(0,0,0,.4) 
@@ -78,17 +75,14 @@ a,body,div,h2,html,p,ul{
     margin-bottom:.5rem 
 }
 .mb3{
-    margin-bottom:1rem 
+    margin-bottom:0.85rem 
 }
 .mv1{
     margin-bottom:.25rem;
     margin-top:.25rem 
 }
 .f4{
-    font-size:1.25rem 
-}
-.f6{
-    font-size:.8rem 
+    font-size:1.2rem 
 }
 .f7{
     font-size:.8rem 
@@ -108,6 +102,8 @@ a,body,div,h2,html,p,ul{
         opacity:1 
    }
 }
+
+
 @media only screen and (max-width:1601px){
     html{
         zoom:90% 
@@ -126,7 +122,7 @@ a,body,div,h2,html,p,ul{
 }
 @media only screen and (max-width:576px){
     html{
-        zoom:70% 
+        zoom:72% 
    }
 }
 @media only screen and (max-width:319px){
