--- a/src/styleContact.css
+++ b/src/styleContact.css
@@ -1,3 +1,4 @@
+ 
 .no_highlights{
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
@@ -6,28 +7,41 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-}
+} 
+
 #action, #mob-action, #mob-action2 {
   color: var(--generated-color);
 }
+
 .hide, .hide2 {
   display: none;
 }
+
+.cat-phones-hide{
+  zoom:52%; 
+}
+
+.contact-links-col{
+  zoom:72%;
+  position:relative;  
+  bottom: 250px;
+}
+
 .container, .container2 {
   zoom:40%;
   width: 80rem;
   height: 80rem;
   position: absolute;
   top: 50%;
-  left: 20%;
+  left: 51%;
   transform: translate(-50%, -50%);
 }
 .container *, .container2 *{
   position: absolute;
 }
 .table, .table2 {
-  width: 85vw;
-  height: 57vh;
+  width: 110vw;
+  height: 127vh;
   background: #eeecec ;
   border-top: 1rem solid var(--generated-color);
   left: 50%;
@@ -209,16 +223,12 @@
   transition: color 0.7s linear;
   color: var(--generated-color);
 }
-#action:hover {
-  zoom:100%;
-}
+ 
 #action{
   font-size: 160px;
   text-decoration:none 
 }
-#action:hover{
-  text-decoration:underline 
-}
+
 .social-media-icon:hover {
   background: rgba(61, 55, 55, 0.333);
   border-radius: 10px;
@@ -239,36 +249,54 @@
   display: flex;
   align-items: center ;
 }
-@media only screen and (max-width:1660px){
-  .container, .container2 {
-      zoom:30%;
- }
-  #action{
-      font-size: 120px;
- }
-  .social-media-icon {
-      font-size: 64px;
- }
-  .table, .table2 {
-      width: 100vw;
-      height: 77vh;
- }
-  .middle-content{
-      position:relative;
-      bottom:30px;
- }
+#action:hover, #mob-action:hover, #mob-action2:hover { 
+  text-decoration:underline;
+  zoom:101%;
+  text-underline-position: under;
 }
+
+ 
+@media only screen and (max-width:1660px){
+  .cat-phones-hide{
+    zoom:52%; 
+  }
+  
+  .contact-links-col{
+    zoom:72%;
+    right: 430px;
+    bottom: 250px;
+  }
+  .table, .table2 {
+    width: 100vw;
+    height: 107vh;
+}
+.contact-links-col{
+  position:relative;
+  left:200px;
+}
+
+}
+
 @media only screen and (max-width:1400px){
+  .cat-phones-hide{
+    zoom:35%; 
+  }
+  
+  .contact-links-col{
+    zoom:62%;
+ 
+    bottom: 170px;
+  }  
+  .paws, .paws2 {
+    left: 56%;
+    top: 66%;
+} 
+
   .container, .container2 {
-      zoom:25%;
-      height: 87rem;
+      
+      height: 82rem;
  }
-  #action{
-      font-size: 100px;
- }
-  .social-media-icon {
-      font-size: 50px;
- }
+ 
   .table, .table2 {
       width: 120vw;
       height: 97vh;
@@ -276,11 +304,11 @@
 }
 @media only screen and (max-width:1199px){
   .container, .container2 {
-      zoom:20%;
+ 
       width: 70rem;
       height: 85rem;
-      left: 20%;
-      top: 65%;
+      top: 50%;
+      left: 48%;
  }
   .paws, .paws2 {
       left: 64%;
@@ -290,17 +318,19 @@
       width: 150vw;
       height: 127vh;
  }
-  .social-media-icon {
-      font-size: 40px;
- }
+ .contact-links-col{
+  zoom:66%;
+ 
+ 
+}
 }
 @media only screen and (max-width:992px){
   .container, .container2 {
-      zoom:16%;
+    left: 46%;
  }
   .paws, .paws2 {
       width: 100rem;
-      left: 84%;
+      left: 86%;
       top: 68%;
       transform-origin: 50% 0%;
       transform: translatex(-50%) rotate(15deg);
@@ -313,20 +343,21 @@
   .middle-content{
       bottom:40px;
  }
-  .social-media-icon {
-      font-size: 40px;
- }
-  #action{
-      font-size: 80px;
- }
+ #action{
+  font-size: 140px;
+}
+ 
 }
 @media only screen and (max-width:767px){
+  .cat-phones-hide{
+    zoom:30%; 
+  }
   .container {
-      left: 15%;
+      left: 40%;
  }
   .paws, .paws2 {
       width: 100rem;
-      left: 110%;
+      left: 120%;
       top: 68%;
       transform-origin: 50% 0%;
       transform: translatex(-50%) rotate(15deg);
@@ -336,35 +367,35 @@
       height: 157vh;
       left: 100%;
  }
-  .middle-content{
-      bottom:50px;
- }
-  .social-media-icon {
-      font-size: 23px;
- }
-  #action{
-      font-size: 60px;
- }
+ .contact-links-col{
+  zoom:56%;
+
+  bottom: 170px;
+} 
+ 
 }
 @media only screen and (max-width:576px){
+ 
   .middle-content{
       top:5px;
  }
   #action{
-      font-size: 40px;
+      font-size: 120px;
  }
   .social-media-icon {
-      font-size: 18px;
+      font-size: 58px;
  }
   .container, .container2 {
-      left: 12%;
+      left: 34%;
       width: 30rem;
  }
   .table, .table2 {
-      width: 270vw;
+      width: 360vw;
+      left: 140%;
  }
   .paws, .paws2 {
       left: 135%;
+      top: 65%;
  }
 }
 @media only screen and (max-width:420px){
@@ -398,4 +429,12 @@
   .paws, .paws2 {
       left: 135%;
  }
+}
+
+@media only screen and (max-width:319px) {
+  .table, .table2 {
+    width: 800vw;
+    height: 357vh;
+    left: 140%;
+}
 }
