--- a/src/styleWork.css
+++ b/src/styleWork.css
@@ -33,7 +33,7 @@ a,body,div,h2,html,p,ul{
     transition:color .15s ease-in;
     
 }
-   .fa-github:hover, .name-link:hover, .link:focus,.link:hover  {
+ .fa-person-chalkboard:hover, .fa-internet-explorer:hover,  .fa-github:hover, .name-link:hover, .link:focus,.link:hover  {
     transition:color .15s ease-in;
     color:blue !important;
      
